package proto_ff;

import "yd_fieldoptions.proto";


message E_EncyclopediaHandbookLviattributeDesc
{
	optional int64 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "类型"];
}

message E_EncyclopediaHandbookStariattributeDesc
{
	optional int64 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "类型"];
}

message E_EncyclopediaHandbook
{
	optional int64 m_handbookID = 1[(yd_fieldoptions.field_cname) = "图鉴id"];
	optional int64 m_itemId = 2[(yd_fieldoptions.field_cname) = "关联物品id"];
	optional string m_handbookName = 3[(yd_fieldoptions.field_cname) = "图鉴名称", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_handbookQuality = 4[(yd_fieldoptions.field_cname) = "图鉴品质"];
	optional int32 m_handbookType = 5[(yd_fieldoptions.field_cname) = "图鉴类型"];
	optional string m_handbookType_name = 6[(yd_fieldoptions.field_cname) = "图鉴类型名称", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_handZ = 7[(yd_fieldoptions.field_cname) = "图鉴组"];
	optional string m_handZName = 8[(yd_fieldoptions.field_cname) = "图鉴组名称", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_handbookLv = 9[(yd_fieldoptions.field_cname) = "图鉴等级上限"];
	optional int64 m_LvId = 10[(yd_fieldoptions.field_cname) = "升级道具id"];
	optional string m_LvNum = 11[(yd_fieldoptions.field_cname) = "升级道具数量", (yd_fieldoptions.field_bufsize) = 256];
	optional int64 m_starId = 12[(yd_fieldoptions.field_cname) = "升星道具id"];
	optional string m_starNum = 13[(yd_fieldoptions.field_cname) = "升星道具数量", (yd_fieldoptions.field_bufsize) = 64];
	repeated E_EncyclopediaHandbookLviattributeDesc m_LvIattribute = 14[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 4];
	repeated int32 m_awakeSkill = 15[(yd_fieldoptions.field_cname) = "技能", (yd_fieldoptions.field_arysize) = 3];
	repeated E_EncyclopediaHandbookStariattributeDesc m_starIattribute = 16[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 4];
}


message Sheet_EncyclopediaHandbook
{
	repeated E_EncyclopediaHandbook E_EncyclopediaHandbook_List = 1[(yd_fieldoptions.field_arysize)=512];
}

message E_EncyclopediaHandbookfateAttributeDesc
{
	optional int64 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "类型"];
}

message E_EncyclopediaHandbookfate
{
	optional int64 m_fateID = 1[(yd_fieldoptions.field_cname) = "羁绊id"];
	optional string m_fateName = 2[(yd_fieldoptions.field_cname) = "羁绊名称", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_fateQuality = 3[(yd_fieldoptions.field_cname) = "羁绊品质"];
	repeated int64 m_fateHand = 4[(yd_fieldoptions.field_cname) = "羁绊图鉴", (yd_fieldoptions.field_arysize) = 4];
	repeated E_EncyclopediaHandbookfateAttributeDesc m_attribute = 5[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 6];
}


message Sheet_EncyclopediaHandbookfate
{
	repeated E_EncyclopediaHandbookfate E_EncyclopediaHandbookfate_List = 1[(yd_fieldoptions.field_arysize)=128];
}

message E_EncyclopediaHandbookresolve
{
	optional int32 m_handbookQuality = 1[(yd_fieldoptions.field_cname) = "图鉴道具品质"];
	optional int32 m_resolveItem = 2[(yd_fieldoptions.field_cname) = "分解道具"];
	optional int32 m_resolveNum = 3[(yd_fieldoptions.field_cname) = "分解数量"];
}


message Sheet_EncyclopediaHandbookresolve
{
	repeated E_EncyclopediaHandbookresolve E_EncyclopediaHandbookresolve_List = 1[(yd_fieldoptions.field_arysize)=8];
}

message E_EncyclopediaHandbooklv_attr
{
	optional int64 m_attID = 1[(yd_fieldoptions.field_cname) = "属性组id"];
	repeated int32 m_att = 2[(yd_fieldoptions.field_cname) = "属性等级", (yd_fieldoptions.field_arysize) = 100];
}


message Sheet_EncyclopediaHandbooklv_attr
{
	repeated E_EncyclopediaHandbooklv_attr E_EncyclopediaHandbooklv_attr_List = 1[(yd_fieldoptions.field_arysize)=256];
}

message E_EncyclopediaHandbookstar_attr
{
	optional int64 m_attID = 1[(yd_fieldoptions.field_cname) = "属性组id"];
	repeated int32 m_att = 2[(yd_fieldoptions.field_cname) = "属性等级", (yd_fieldoptions.field_arysize) = 20];
}


message Sheet_EncyclopediaHandbookstar_attr
{
	repeated E_EncyclopediaHandbookstar_attr E_EncyclopediaHandbookstar_attr_List = 1[(yd_fieldoptions.field_arysize)=256];
}

message E_EncyclopediaBeastBeastDesc
{
	optional int32 m_num = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_att = 2[(yd_fieldoptions.field_cname) = "Id"];
}

message E_EncyclopediaBeast
{
	optional int64 m_id = 1[(yd_fieldoptions.field_cname) = "神兽ID"];
	optional string m_name = 2[(yd_fieldoptions.field_cname) = "神兽名称", (yd_fieldoptions.field_bufsize) = 64];
	repeated int32 m_pos = 3[(yd_fieldoptions.field_cname) = "品质", (yd_fieldoptions.field_arysize) = 5];
	repeated E_EncyclopediaBeastBeastDesc m_beast = 4[(yd_fieldoptions.field_cname) = "神兽属性", (yd_fieldoptions.field_arysize) = 6];
	repeated int64 m_skill = 5[(yd_fieldoptions.field_cname) = "神兽技能", (yd_fieldoptions.field_arysize) = 3];
}


message Sheet_EncyclopediaBeast
{
	repeated E_EncyclopediaBeast E_EncyclopediaBeast_List = 1[(yd_fieldoptions.field_arysize)=32];
}

message E_EncyclopediaEquipexpvalueBeaststarDesc
{
	optional int32 m_num = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_att = 2[(yd_fieldoptions.field_cname) = ""];
}

message E_EncyclopediaEquipexpvalueGoldstarDesc
{
	optional int32 m_num = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_att = 2[(yd_fieldoptions.field_cname) = ""];
}

message E_EncyclopediaEquipexpvalue
{
	optional int64 m_id = 1[(yd_fieldoptions.field_cname) = "材料ID"];
	optional int64 m_type = 2[(yd_fieldoptions.field_cname) = "材料类型"];
	optional string m_name = 3[(yd_fieldoptions.field_cname) = "材料名称", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_exp = 4[(yd_fieldoptions.field_cname) = "初始经验"];
	optional int64 m_link = 5[(yd_fieldoptions.field_cname) = "来源"];
	optional int32 m_goldAttAll = 6[(yd_fieldoptions.field_cname) = "仙品共条数"];
	optional int32 m_goldAtt = 7[(yd_fieldoptions.field_cname) = "黄星属性条数"];
	repeated E_EncyclopediaEquipexpvalueBeaststarDesc m_beastStar = 8[(yd_fieldoptions.field_cname) = "蓝星属性", (yd_fieldoptions.field_arysize) = 2];
	repeated E_EncyclopediaEquipexpvalueGoldstarDesc m_goldStar = 9[(yd_fieldoptions.field_cname) = "黄星属性", (yd_fieldoptions.field_arysize) = 5];
}


message Sheet_EncyclopediaEquipexpvalue
{
	repeated E_EncyclopediaEquipexpvalue E_EncyclopediaEquipexpvalue_List = 1[(yd_fieldoptions.field_arysize)=64];
}

message E_EncyclopediaBeastexpand
{
	optional int32 m_number = 1[(yd_fieldoptions.field_cname) = "激活个数"];
	optional int32 m_lv = 2[(yd_fieldoptions.field_cname) = "激活等级"];
	optional int64 m_id = 3[(yd_fieldoptions.field_cname) = "激活道具id"];
	optional int32 m_num = 4[(yd_fieldoptions.field_cname) = "激活道具数量"];
}


message Sheet_EncyclopediaBeastexpand
{
	repeated E_EncyclopediaBeastexpand E_EncyclopediaBeastexpand_List = 1[(yd_fieldoptions.field_arysize)=8];
}

message E_EncyclopediaBeastprivilegeAttributeDesc
{
	optional int64 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "类型"];
}

message E_EncyclopediaBeastprivilege
{
	optional int32 m_privilegeType = 1[(yd_fieldoptions.field_cname) = "特权类型"];
	optional string m_name = 2[(yd_fieldoptions.field_cname) = "名字", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_price = 3[(yd_fieldoptions.field_cname) = "价格链接"];
	optional int64 m_expAddition = 4[(yd_fieldoptions.field_cname) = "经验值加成"];
	repeated E_EncyclopediaBeastprivilegeAttributeDesc m_attribute = 5[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 4];
}


message Sheet_EncyclopediaBeastprivilege
{
	repeated E_EncyclopediaBeastprivilege E_EncyclopediaBeastprivilege_List = 1[(yd_fieldoptions.field_arysize)=4];
}

message E_EncyclopediaBeastexp
{
	optional int32 m_lv = 1[(yd_fieldoptions.field_cname) = "等级"];
	optional int32 m_exp = 2[(yd_fieldoptions.field_cname) = "升级所需经验"];
}


message Sheet_EncyclopediaBeastexp
{
	repeated E_EncyclopediaBeastexp E_EncyclopediaBeastexp_List = 1[(yd_fieldoptions.field_arysize)=256];
}

message E_EncyclopediaEmployLviattributeDesc
{
	optional int64 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "类型"];
}

message E_EncyclopediaEmploy
{
	optional int64 m_employID = 1[(yd_fieldoptions.field_cname) = "收录id"];
	optional int64 m_type = 2[(yd_fieldoptions.field_cname) = "激活类型"];
	optional int64 m_itemId = 3[(yd_fieldoptions.field_cname) = "激活条件"];
	optional string m_employName = 4[(yd_fieldoptions.field_cname) = "收录名称", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_employQuality = 5[(yd_fieldoptions.field_cname) = "收录品质"];
	optional int32 m_employType = 6[(yd_fieldoptions.field_cname) = "收录类型"];
	optional string m_employType_name = 7[(yd_fieldoptions.field_cname) = "收录类型名称", (yd_fieldoptions.field_bufsize) = 64];
	optional int32 m_employZ = 8[(yd_fieldoptions.field_cname) = "收录组"];
	optional string m_employZName = 9[(yd_fieldoptions.field_cname) = "收录组名称", (yd_fieldoptions.field_bufsize) = 64];
	repeated E_EncyclopediaEmployLviattributeDesc m_LvIattribute = 10[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 4];
}


message Sheet_EncyclopediaEmploy
{
	repeated E_EncyclopediaEmploy E_EncyclopediaEmploy_List = 1[(yd_fieldoptions.field_arysize)=128];
}

message E_EncyclopediaTableLviattributeDesc
{
	optional int64 m_value = 1[(yd_fieldoptions.field_cname) = "值"];
	optional int32 m_type = 2[(yd_fieldoptions.field_cname) = "类型"];
}

message E_EncyclopediaTable
{
	optional int64 m_ID = 1[(yd_fieldoptions.field_cname) = "id"];
	optional int64 m_tableid = 2[(yd_fieldoptions.field_cname) = "天机谱id"];
	optional string m_tableName = 3[(yd_fieldoptions.field_cname) = "天机谱名称", (yd_fieldoptions.field_bufsize) = 64];
	repeated E_EncyclopediaTableLviattributeDesc m_LvIattribute = 4[(yd_fieldoptions.field_cname) = "属性", (yd_fieldoptions.field_arysize) = 4];
}


message Sheet_EncyclopediaTable
{
	repeated E_EncyclopediaTable E_EncyclopediaTable_List = 1[(yd_fieldoptions.field_arysize)=16];
}
